--- a/STYLE/style.css
+++ b/STYLE/style.css
@@ -45,16 +45,67 @@
         height: 85vh;
         display: flex;
         flex-direction: row;
-        align-items: center;
         justify-content: space-around;
     }
 
     #clients {
 
+        margin-top: 4vh;
         width: 60%;
-        height: 90%;
+        height: 40vh;
         border: 1px solid #000;
         border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .area-new-client {
+
+        width: 100%;
+        height: 10vh;
+        display: flex;
+        flex-direction: row;
+        border-top: 1px solid #000;
+        border-bottom: 1px solid #000;
+    }
+
+    .area-datas {
+
+        width: 20%;
+        height: 10vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .figure-datas {
+
+        width: 40%;
+        height: 60%;
+        margin: auto;
+    }
+
+    .img-datas {
+
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        border: 1px solid #000;
+    }
+    .title-datas {
+
+        width: max-content;
+        height: max-content;
+        font-size: 1.5vw;
+        text-align: center;
+    }
+
+    .text-datas {
+
+        width: max-content;
+        height: max-content;
+        font-size: 1vw;
+        text-align: center;
     }
 
     h2 {
@@ -67,6 +118,7 @@
 
     form {
 
+        margin-top: 4vh;
         width: 20%;
         height: 90%;
         display: flex;
@@ -229,16 +281,70 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
+    
     }
 
     #clients {
 
-        width: 60%;
-        height: 20vh;
+        width: 100%;
+        height: 40vh;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+    }
+
+    #title-clients {
+
+        margin-left: 3%;
+    }
+
+    .area-new-client {
+
+        width: 100%;
+        height: 10vh;
+        display: flex;
+        flex-direction: row;
+        border-top: 1px solid #000;
+        border-bottom: 1px solid #000;
+    }
+
+    .area-datas {
+
+        width: 20%;
+        height: 10vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .figure-datas {
+
+        width: 40%;
+        height: 50%;
+        margin: auto;
+    }
+
+    .img-datas {
+
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        border: 1px solid #000;
+    }
+    .title-datas {
+
+        width: max-content;
+        height: max-content;
+        font-size: 2.4vw;
+        text-align: center;
+    }
+
+    .text-datas {
+
+        width: max-content;
+        height: max-content;
+        font-size: 2vw;
+        text-align: center;
     }
 
     h2 {
@@ -250,6 +356,7 @@
 
     form {
 
+        margin-top: 4vh;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -418,16 +525,68 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
     }
 
     #clients {
 
-        width: 60%;
-        height: 20vh;
+        width: 100%;
+        height: 40vh;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+    }
+
+    #title-clients {
+
+        margin-left: 3%;
+    }
+
+    .area-new-client {
+
+        width: 100%;
+        height: 10vh;
+        display: flex;
+        flex-direction: row;
+        border-top: 1px solid #000;
+        border-bottom: 1px solid #000;
+    }
+
+    .area-datas {
+
+        width: 20%;
+        height: 10vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .figure-datas {
+
+        width: 40%;
+        height: 60%;
+        margin: auto;
+    }
+
+    .img-datas {
+
+        width: 100%;
+        height: 70%;
+        border-radius: 50%;
+        border: 1px solid #000;
+    }
+    .title-datas {
+
+        width: max-content;
+        height: max-content;
+        font-size: 3vw;
+        text-align: center;
+    }
+
+    .text-datas {
+
+        width: max-content;
+        height: max-content;
+        font-size: 2.4vw;
+        text-align: center;
     }
 
     h2 {
