--- a/STYLE/style.css
+++ b/STYLE/style.css
@@ -79,7 +79,7 @@
 
     .area-datas {
 
-        width: 14%;
+        width: 12,5%;
         height: 10vh;
         display: flex;
         flex-direction: column;
@@ -105,7 +105,7 @@
 
         width: max-content;
         height: max-content;
-        font-size: 1.5vw;
+        font-size: 1.2vw;
         text-align: center;
     }
 
@@ -211,6 +211,29 @@
 
         width: 1.5vw;
         margin-left: 3%;
+    }
+
+    #container-admin {
+
+        width: 100%;
+        height: 4vh;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    #title-admin {
+
+        width: max-content;
+        height: max-content;
+        margin-left: 3%;
+    }
+
+    #input-admin {
+
+        width: 2vh;
+        height: 2vh;
+        margin-left: 2vh;
     }
 
     .title-gender {
@@ -344,7 +367,7 @@
 
     .area-datas {
 
-        width: 20%;
+        width: 12.5%;
         height: 10vh;
         display: flex;
         flex-direction: column;
@@ -370,7 +393,7 @@
 
         width: max-content;
         height: max-content;
-        font-size: 2.4vw;
+        font-size: 2vw;
         text-align: center;
     }
 
@@ -378,7 +401,7 @@
 
         width: max-content;
         height: max-content;
-        font-size: 2vw;
+        font-size: 1.5vw;
         text-align: center;
     }
 
@@ -473,6 +496,30 @@
         flex-direction: row;
         align-items: center;
         margin-left: 20%;
+    }
+
+    #container-admin {
+
+        margin-top: 3vh;
+        width: 100%;
+        height: max-content;
+        display: flex;
+        flex-direction: row;
+    }
+
+    #title-admin {
+
+        width: max-content;
+        height: max-content;
+        margin-left: 23%;
+        font-size: 3vw;
+    }
+
+    #input-admin {
+
+        width: 2vh;
+        height: 2vh;
+        margin-left: 2vh;
     }
 
     input[type="radio"] {
@@ -607,7 +654,7 @@
 
     .area-datas {
 
-        width: 20%;
+        width: 12.5%;
         height: 10vh;
         display: flex;
         flex-direction: column;
@@ -633,7 +680,7 @@
 
         width: max-content;
         height: max-content;
-        font-size: 3vw;
+        font-size: 2vw;
         text-align: center;
     }
 
@@ -641,7 +688,7 @@
 
         width: max-content;
         height: max-content;
-        font-size: 2vw;
+        font-size: 1.5vw;
         text-align: center;
     }
 
@@ -742,6 +789,30 @@
         flex-direction: row;
         align-items: center;
         margin-left: 20%;
+    }
+
+    #container-admin {
+
+        margin-top: 3vh;
+        width: 100%;
+        height: max-content;
+        display: flex;
+        flex-direction: row;
+    }
+
+    #title-admin {
+
+        width: max-content;
+        height: max-content;
+        margin-left: 23%;
+        font-size: 4.5vw;
+    }
+
+    #input-admin {
+
+        width: 3vh;
+        height: 3vh;
+        margin-left: 2vh;
     }
 
     input[type="radio"] {
