--- a/STYLE/style.css
+++ b/STYLE/style.css
@@ -645,6 +645,8 @@
 
         margin-left: 3%;
         font-size: 6vw;
+        width: max-content;
+        height: max-content;
     }
 
     .area-new-client {
